<resources>
    <string name="app_name">Java4Kids</string>

    <!-- Strings related to Startup page -->
    <string name="app_version">version 0.0.0</string>
    <string name="app_startup_screen">app startup screen</string>
    <string name="startapp">Start!</string>
    <string name="startapp_login">Login!</string>
    <string name="back">Back</string>

    <!-- Strings related to NavigationDrawer -->
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings related to Profile -->
    <string name="username_colon">Username:</string>
    <string name="firstname_colon">Firstname:</string>
    <string name="game_point_colon">Game point:</string>
    <string name="ranking">Ranking</string>
    <string name="ranking_colon">Ranking:</string>
    <string name="points">Points</string>
    <string name="level_colon">Level:</string>
    <string name="user_icon">user icon</string>

    <!-- Strings related to Game page -->
    <string name="topic_procedural_programming">Topic: Procedural Programming</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="separate_line">----------------------------------------------</string>
    <string name="level_1">Level 1</string>
    <string name="game_2_drag_and_drop_the_right_answer">Game 2: Drag and Drop the right answer</string>
    <string name="game_1_chose_the_correct_answer">Game 1: Chose the correct answer</string>
    <string name="game_3_matching_the_pieces">Game 3: Matching the pieces</string>
    <string name="more_games_and_more_programming_topic_will_be_coming_up_soon">More games and more programming topic will be coming up soon!!!</string>
    <string name="inheritance_icon">inheritance_icon</string>
    <string name="dragdrop_level1_icon">dragdrop_level1_icon</string>
    <string name="java_programming"><![CDATA[--> Java Programming]]></string>
    <string name="inheritance">Inheritance</string>
    <string name="variables_types">Variables Types</string>

    <!-- Strings related to Chosing the right answer game -->
    <string name="question">Question</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="score_0_question_5_5">score: 0 question: 1/5</string>

    <!-- Strings related to Drag and Drop game -->
    <string name="underline">___________</string>
    <string name="drag_1">drag 1</string>
    <string name="drag_2">drag 2</string>
    <string name="drag_3">Drag 3</string>
    <string name="drag_4">Drag 4</string>
    <string name="drag_5">Drag 5</string>
    <string name="next">Next</string>

    <!-- Strings related to Friend page -->
    <string name="friends_list">Friends List:</string>
    <string name="username">Username</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="please_login_to_view">Please login to view.</string>
    <string name="no_network">No Network :(</string>
    <string name="level_0">Level: 0</string>
    <string name="score_0">Score: 0</string>

    <!-- Strings related to Search friend Engine -->
    <string name="default_name">Default</string>
    <string name="welcome_back">Welcome back :)</string>
    <string name="no_data">No Data :(</string>

    <!-- Strings related to Progress page -->
    <string name="days">Days</string>
    <string name="_0">0%</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="complement">Complement</string>
    <string name="tasks_complement">Tasks complement:</string>
    <string name="login_trend">Login Strike:</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="sat">Sat</string>
    <string name="thu">Thu</string>
    <string name="sun">Sun</string>
    <string name="fri">Fri</string>
    <string name="login_bonus_points">Login \nBonus \n(points)</string>

    <!-- Strings related to Settings -->
    <string name="edit_icon">Edit icon</string>
    <string name="edit_username">Edit username</string>
    <string name="change_background">Change background</string>
    <string name="q_amp_a"><![CDATA[Q & A]]></string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>

    <!-- Strings related to Q and A -->
    <string name="q_and_a"><u>Q and A</u></string>
    <string name="question_1">Question 1</string>

    <!-- Strings related to Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_me"><![CDATA[Make an account]]></string>

    <!-- Strings related to Register -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="please_fill_in_the_form_below_n_if_you_are_under_10_years_old_please_have_your_parent_to_create_this_account_for_you">* Please fill in the form below.  \n* If you are under 10 years-old, please have your parent to create this account for you.</string>
    <string name="privacy">Privacy</string>
    <string name="register_agreement">I understand that my details will be stored privately and will not be shared to a third party. The personal information asked above is only for data collection use.</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create New Account :)</string>
    <string name="confirm_password">Confirm password</string>

    <!-- Strings related to popup lesson description -->
    <string name="x">x</string>
    <string name="lesson_topic">Lesson topic</string>
    <string name="content_description">Content Description</string>
    <string name="start">Start!</string>

    <!-- Strings related to popup lesson summary -->
    <string name="done">Done!</string>
    <string name="answered_result">Answered correctly: 0 \nAnswered wrong: 0 \nScore: 0</string>
    <string name="lesson_summary">Lesson summary</string>

    <!-- Strings related to login Pro -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <!-- ends here -->
</resources>
