<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerPage_default_bg"
    tools:context=".LoginAndRegister.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/create_new_account" tools:targetApi="jelly_bean" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_fill_in_the_form_below_n_if_you_are_under_10_years_old_please_have_your_parent_to_create_this_account_for_you"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:importantForAutofill="no" tools:targetApi="o" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:hint="@string/last_name"
                android:importantForAutofill="no" tools:targetApi="o" />

            <EditText
                android:id="@+id/age"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/age"
                android:ems="10"
                android:inputType="number"
                android:importantForAutofill="no" tools:targetApi="o" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/boy"
                    android:onClick="GenderRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/girl"
                    android:onClick="GenderRadioButtonClicked"/>
            </RadioGroup>

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:importantForAutofill="no" tools:targetApi="o" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/username"
                android:inputType="text"
                android:importantForAutofill="no" tools:targetApi="o" />

            <EditText
                android:id="@+id/create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no" tools:targetApi="o" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no" tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <CheckBox
                android:id="@+id/checkBox_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_agreement"
                android:textSize="15sp"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/register" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>