<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    tools:context=".FriendsPage.FriendsActivity"
    tools:showIn="@layout/activity_friends">

    <TextView
        android:id="@+id/friendlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_list"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TableRow
        android:id="@+id/table_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friendlist"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:text="Ranking" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            android:text="@string/username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="bold"
            android:text="@string/score" />
    </TableRow>

    <ListView
        android:id="@+id/fd_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/table_description"/>

    <TextView
        android:id="@+id/not_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/please_login_to_view"/>

    <TextView
        android:id="@+id/noNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/no_network"/>

</RelativeLayout>