<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndRegister.LoginActivity">

    <LinearLayout
        android:id="@+id/login_default_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.8"
        android:padding="10dp">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="#8FFF"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no" tools:targetApi="o"/>

            <Button
                android:id="@+id/login_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/login_registerMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/register_me"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>