<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/friends_ranking"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black"
                android:text="Rank"
                android:gravity="start"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/friends_firstname"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black"
                android:text="@string/username"
                android:gravity="start"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/friends_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/level_0"
                android:gravity="end|right"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/friends_score"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/score_0"
                android:gravity="end|right"
                android:layout_weight="1"
                />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>